no longer need to set explicit height, width is defaulted to 100% on small screens.  readme updated to reflect.

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,3 @@
 //Set slider height and width here
-$slide-width: 800;
-$slide-height: 600;
+$slide-width: 800px;
+$slide-height: 600px;
